<resources>
    <string name="app_name">irite</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="test">ทดสอบ thai font</string>

    <string name="normal">ปกติ</string>
    <string name="abnormal">ไม่ปกติ</string>
    <string name="checklist_head1">แบบการตรวจสภาพเครื่องมือตรวจสถานที่เกิดเหตุ (Crime Scene Investigation Equipment Checklist)</string>


    <string name="form_life_header">เก็บหลักฐาน ชีวิต (Crime Scene Investigation Equipment Checklist)</string>

    <string name="form_event">1. การรับแจ้งเหตุ</string>

    <string name="form_event_case_field">คดี</string>
    <string name="form_event_date_field">วันที่</string>
    <string name="form_event_time_field">เวลาประมาณ</string>


    <string name="form_event_house">2. สถานที่เกิดเหตุ</string>
    <string name="form_event_time">3. วันเวลาที่ทราบเหตุ/เกิดเหตุ</string>


    <!-- TODO: Asset -->
    <string name="from_asset_steal">ลักทรัพย์</string>
    <string name="from_asset_thieve">ชิงทรัพย์</string>
    <string name="from_asset_plunder">ปล้นทรัพย์</string>
    <string name="from_asset_other">อื่น ๆ</string>
    <string name="from_asset_remark">ระบุ</string>
    <string name="from_asset_date">วันที่</string>
    <string name="from_asset_est_time">เวลาประมาณ</string>
    <string name="from_asset_case">คดี</string>
    <string name="from_asset_request_case">การรับแจ้ง</string>
    <string name="from_asset_request_phone">ทางโทรศัพท์</string>
    <string name="from_asset_request_radio">ทางวิทยุสื่อสาร</string>
    <string name="from_asset_request_paper">ทางหนังสือ</string>
    <string name="from_asset_request_other">อื่น ๆ</string>
    <string name="from_asset_request_sp">สภ./สน.</string>
    <string name="from_asset_request_place">ที่</string>
    <string name="from_asset_request_down">ลง</string>
    <string name="from_asset_request_police">พนักงานสอบสวน</string>
    <string name="from_asset_request_phone_no">หมายเลขโทรศัพท์</string>
    <!-- TODO: Asset -->
    <string name="from_asset_place_head">2. สถานที่เกิดเหตุ</string>
    <string name="from_asset_place">สถานที่เกิดเหตุ</string>
    <string name="from_asset_place_onwer">เจ้าของบ้าน</string>
    <string name="from_asset_place_loss">ชื่อผู้เสียหาย</string>
    <string name="from_asset_place_other">เกี่ยวข้องอื่น</string>
    <string name="from_asset_place_loss_name">ชื่อ</string>
    <string name="from_asset_place_loss_age">อายุ</string>
    <string name="from_asset_place_loss_year">ปี</string>
    <!-- TODO: Asset 3-->
    <string name="from_asset_date_head">3. วันเวลาที่ทราบเหตุ/เกิดเหตุ</string>
    <string name="from_asset_date_know">วันเวลาที่ผู้เสียหาย ทราบเหตุ/เกิดเหตุ</string>
    <string name="from_asset_date_police_know">วันเวลาที่พนักงานสอบสวนทราบเหตุ</string>

    <!-- TODO: Asset 4-->
    <string name="from_asset_date_check_head">4. วันเวลาที่ตรวจเหตุ</string>
    <string name="from_asset_date_check">วันเวลาที่ทําการตรวจสถานที่เกิดเหตุ</string>
    <string name="from_asset_date_check_more">วันเวลาที่ทําการตรวจสถานที่เกิดเหตุเพิ่มเติม</string>

    <!-- TODO: Asset 5-->
    <string name="from_asset_man_check_head">5.ผู้ตรวจสถานที่เกิดเหตุ</string>
    <string name="from_asset_man_check">ผู้ตรวจสถานที่เกิดเหตุ</string>

    <!-- TODO: Asset 6-->
    <string name="from_asset_prop_place_head">6.ลักษณะสถานที่เกิดเหตุ</string>
    <string name="from_asset_prop_place">สภาพสถานที่เกิดเหตุเมื่อไปถึง</string>

    <string name="from_asset_prop_place_keep">การรักษาสถานที่เกิดเหตุ</string>
    <string name="from_asset_prop_place_have">มี</string>
    <string name="from_asset_prop_place_nothave">ไม่มี</string>

    <string name="from_asset_prop_place_look">ลักษณะสถานที่เกิดเหตุ</string>
    <string name="from_asset_prop_place_look_outside">ลักษณะภายนอก</string>
    <string name="from_asset_prop_place_house_concreat">บ้านคอนกรีต</string>
    <string name="from_asset_prop_place_house_wood">บ้านไม้</string>
    <string name="from_asset_prop_place_house_half">บ้านครึ่งตึกครึ่งไม้</string>
    <string name="from_asset_prop_place_flat">ตึกแถว</string>
    <string name="from_asset_prop_place_building">อาคารคอนกรีต</string>
    <string name="from_asset_prop_place_townhouse">ทาวน์เฮาส์</string>
    <string name="from_asset_prop_place_comercial_building">อาคารพาณิชย์</string>
    <string name="from_asset_prop_place_other">อื่นๆ</string>

    <string name="from_asset_prop_place_no_of_floor">จำนวนชั้น</string>

    <string name="from_asset_prop_place_around">สภาพบริเวณโดยรอบ</string>
    <string name="from_asset_prop_place_havewall">มีรั้ว</string>
    <string name="from_asset_prop_place_nothavewall">ไม่มีรั้ว</string>

    <string name="from_asset_prop_place_look_inside">เมื่อหันหน้าเข้า</string>
    <string name="from_asset_prop_place_front">ด้านหน้าติด</string>
    <string name="from_asset_prop_place_left">ด้านซ้ายติด</string>
    <string name="from_asset_prop_place_right">ด้านขวาติด</string>
    <string name="from_asset_prop_place_back">ด้านหลังติด</string>

    <string name="from_asset_prop_place_charecter_inside">ลักษณะภายใน</string>
    <string name="from_asset_prop_place_charecter_around">บริเวณที่เกิดเหตุ เกิดเหตุที่</string>

    <string name="copyright_osm">Map data © OpenStreetMap contributors</string>

    <string name="menu_preferences">Settings</string>
    <string name="menu_position_enter_coordinates">Map Position</string>
    <string name="menu_svgclear">Clear SVG icon cache</string>

    <string name="cancelbutton">Cancel</string>
    <string name="okbutton">OK</string>
    <string name="downloadnowbutton">OK</string>
    <string name="rotate_button">Rotate</string>
    <string name="zoomin_button">+</string>
    <string name="zoomout_button">-</string>

    <string name="latitude">Latitude</string>
    <string name="longitude">Longitude</string>
    <string name="zoomlevel">Zoom Level</string>


</resources>