<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingHorizontal="12dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/spacing_large"
            android:layout_marginBottom="@dimen/spacing_medium"
            android:text="@string/from_asset_prop_place"
            android:textAppearance="@style/TextAppearance.AppCompat.Body1"
            android:textColor="@color/grey_60"
            android:textStyle="bold" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="@dimen/spacing_large"
            android:layout_marginBottom="@dimen/spacing_medium"
            android:text="@string/from_asset_prop_place_keep"
            android:textAppearance="@style/TextAppearance.AppCompat.Body1"
            android:textColor="@color/grey_60"
            android:textStyle="bold" />


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/spacing_large"
            android:orientation="vertical"
            android:paddingHorizontal="12dp">

            <RadioGroup
                android:id="@+id/keep_place"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:paddingHorizontal="12dp"
                android:paddingTop="16sp"
                android:layout_marginTop="@dimen/spacing_large"
                android:layout_marginBottom="@dimen/spacing_large">


                <RadioButton
                    android:id="@+id/from_asset_prop_place_have"
                    android:layout_width="60dp"
                    android:layout_height="wrap_content"
                    android:enabled="true"
                    android:text="@string/from_asset_prop_place_have"
                    android:textColor="@color/grey_60" />

                <EditText
                    style="@style/EditText.Flat.Grey"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/spacing_xmlarge"
                    android:background="@drawable/edit_text_round_bg_white"
                    android:minHeight="@dimen/spacing_xmlarge"
                    android:paddingLeft="@dimen/spacing_middle"
                    android:paddingRight="@dimen/spacing_middle" />


                <RadioButton
                    android:id="@+id/from_asset_prop_place_nothave"
                    android:layout_width="60dp"
                    android:layout_height="wrap_content"
                    android:enabled="true"
                    android:text="@string/from_asset_prop_place_nothave"
                    android:textColor="@color/grey_60" />

                <EditText
                    android:id="@+id/asset_from_text_other"
                    style="@style/EditText.Flat.Grey"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/spacing_xmlarge"
                    android:background="@drawable/edit_text_round_bg_white"
                    android:minHeight="@dimen/spacing_xmlarge"
                    android:paddingLeft="@dimen/spacing_middle"
                    android:paddingRight="@dimen/spacing_middle" />
            </RadioGroup>
        </LinearLayout>


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/spacing_large"
            android:layout_marginBottom="@dimen/spacing_medium"
            android:text="@string/from_asset_prop_place_look"
            android:textAppearance="@style/TextAppearance.AppCompat.Body1"
            android:textColor="@color/grey_60"
            android:textStyle="bold" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="@dimen/spacing_large"
            android:layout_marginBottom="@dimen/spacing_medium"
            android:text="@string/from_asset_prop_place_look_outside"
            android:textAppearance="@style/TextAppearance.AppCompat.Body1"
            android:textColor="@color/grey_60"
            android:textStyle="bold" />



        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/spacing_large"
            android:orientation="horizontal"
            android:paddingHorizontal="12dp">

            <RadioGroup

                android:id="@+id/out_charector"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical">

                <RadioButton
                    android:id="@+id/from_asset_prop_place_house_concreat"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:enabled="true"
                    android:text="@string/from_asset_prop_place_house_concreat"
                    android:textColor="@color/grey_60" />

                <RadioButton
                    android:id="@+id/from_asset_prop_place_house_wood"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:enabled="true"
                    android:text="@string/from_asset_prop_place_house_wood"
                    android:textColor="@color/grey_60" />

                <RadioButton
                    android:id="@+id/from_asset_prop_place_house_half"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:enabled="true"
                    android:text="@string/from_asset_prop_place_house_half"
                    android:textColor="@color/grey_60" />

                <RadioButton
                    android:id="@+id/from_asset_prop_place_flat"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:enabled="true"
                    android:text="@string/from_asset_prop_place_flat"
                    android:textColor="@color/grey_60" />

                <RadioButton
                    android:id="@+id/from_asset_prop_place_building"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:enabled="true"
                    android:text="@string/from_asset_prop_place_building"
                    android:textColor="@color/grey_60" />

                <RadioButton
                    android:id="@+id/from_asset_prop_place_townhouse"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:enabled="true"
                    android:text="@string/from_asset_prop_place_townhouse"
                    android:textColor="@color/grey_60" />

                <RadioButton
                    android:id="@+id/from_asset_prop_place_comercial_building"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:enabled="true"
                    android:text="@string/from_asset_prop_place_comercial_building"
                    android:textColor="@color/grey_60" />

                <RadioButton
                    android:id="@+id/from_asset_prop_place_other"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:enabled="true"
                    android:text="@string/from_asset_prop_place_other"
                    android:textColor="@color/grey_60" />
            </RadioGroup>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/spacing_large"
                android:orientation="vertical"
                android:layout_weight="1"
                android:paddingHorizontal="12dp">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/spacing_medium"
                    android:text="@string/from_asset_prop_place_no_of_floor"
                    android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                    android:textColor="@color/grey_60" />

                <EditText
                    android:id="@+id/no_of_floor"
                    style="@style/EditText.Flat.Grey"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/spacing_xmlarge"
                    android:background="@drawable/edit_text_round_bg_white"
                    android:minHeight="@dimen/spacing_xmlarge"
                    android:paddingLeft="@dimen/spacing_middle"
                    android:paddingRight="@dimen/spacing_middle"
                    android:layout_gravity="center"/>
            </LinearLayout>
        </LinearLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/spacing_large"
            android:layout_marginBottom="@dimen/spacing_medium"
            android:text="@string/from_asset_prop_place_around"
            android:textAppearance="@style/TextAppearance.AppCompat.Body1"
            android:textColor="@color/grey_60"
            android:textStyle="bold" />

        <RadioGroup
            android:id="@+id/wall"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical">

            <RadioButton
                android:id="@+id/from_asset_prop_place_havewall"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:enabled="true"
                android:text="@string/from_asset_prop_place_havewall"
                android:textColor="@color/grey_60" />

            <RadioButton
                android:id="@+id/from_asset_prop_place_nothavewall"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:enabled="true"
                android:text="@string/from_asset_prop_place_nothavewall"
                android:textColor="@color/grey_60" />
        </RadioGroup>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/spacing_large"
            android:layout_marginBottom="@dimen/spacing_medium"
            android:text="@string/from_asset_prop_place_look_inside"
            android:textAppearance="@style/TextAppearance.AppCompat.Body1"
            android:textColor="@color/grey_60"
            android:textStyle="bold" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/spacing_large"
            android:orientation="vertical"
            android:layout_weight="1"
            android:paddingHorizontal="12dp">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/spacing_medium"
                android:text="@string/from_asset_prop_place_front"
                android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                android:textColor="@color/grey_60" />

            <EditText
                android:id="@+id/front"
                style="@style/EditText.Flat.Grey"
                android:layout_width="match_parent"
                android:layout_height="@dimen/spacing_xmlarge"
                android:background="@drawable/edit_text_round_bg_white"
                android:minHeight="@dimen/spacing_xmlarge"
                android:paddingLeft="@dimen/spacing_middle"
                android:paddingRight="@dimen/spacing_middle"
                android:layout_gravity="center"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/spacing_medium"
                android:text="@string/from_asset_prop_place_left"
                android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                android:textColor="@color/grey_60" />

            <EditText
                android:id="@+id/left"
                style="@style/EditText.Flat.Grey"
                android:layout_width="match_parent"
                android:layout_height="@dimen/spacing_xmlarge"
                android:background="@drawable/edit_text_round_bg_white"
                android:minHeight="@dimen/spacing_xmlarge"
                android:paddingLeft="@dimen/spacing_middle"
                android:paddingRight="@dimen/spacing_middle"
                android:layout_gravity="center"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/spacing_medium"
                android:text="@string/from_asset_prop_place_right"
                android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                android:textColor="@color/grey_60" />

            <EditText
                android:id="@+id/right"
                style="@style/EditText.Flat.Grey"
                android:layout_width="match_parent"
                android:layout_height="@dimen/spacing_xmlarge"
                android:background="@drawable/edit_text_round_bg_white"
                android:minHeight="@dimen/spacing_xmlarge"
                android:paddingLeft="@dimen/spacing_middle"
                android:paddingRight="@dimen/spacing_middle"
                android:layout_gravity="center"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/spacing_medium"
                android:text="@string/from_asset_prop_place_back"
                android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                android:textColor="@color/grey_60" />

            <EditText
                android:id="@+id/back"
                style="@style/EditText.Flat.Grey"
                android:layout_width="match_parent"
                android:layout_height="@dimen/spacing_xmlarge"
                android:background="@drawable/edit_text_round_bg_white"
                android:minHeight="@dimen/spacing_xmlarge"
                android:paddingLeft="@dimen/spacing_middle"
                android:paddingRight="@dimen/spacing_middle"
                android:layout_gravity="center"/>
        </LinearLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/spacing_large"
            android:layout_marginBottom="@dimen/spacing_medium"
            android:text="@string/from_asset_prop_place_charecter_inside"
            android:textAppearance="@style/TextAppearance.AppCompat.Body1"
            android:textColor="@color/grey_60"
            android:textStyle="bold" />
        <EditText
            android:id="@+id/in_charector"
            style="@style/EditText.Flat.Grey"
            android:layout_width="match_parent"
            android:layout_height="@dimen/spacing_xmlarge"
            android:background="@drawable/edit_text_round_bg_white"
            android:minHeight="@dimen/spacing_xmlarge"
            android:paddingLeft="@dimen/spacing_middle"
            android:paddingRight="@dimen/spacing_middle"
            android:inputType="textMultiLine"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/spacing_large"
            android:layout_marginBottom="@dimen/spacing_medium"
            android:text="@string/from_asset_prop_place_charecter_around"
            android:textAppearance="@style/TextAppearance.AppCompat.Body1"
            android:textColor="@color/grey_60"
            android:textStyle="bold" />
        <EditText
            android:id="@+id/around_place"
            style="@style/EditText.Flat.Grey"
            android:layout_width="match_parent"
            android:layout_height="@dimen/spacing_xmlarge"
            android:background="@drawable/edit_text_round_bg_white"
            android:minHeight="@dimen/spacing_xmlarge"
            android:paddingLeft="@dimen/spacing_middle"
            android:paddingRight="@dimen/spacing_middle"
            android:inputType="textMultiLine"/>

    </LinearLayout>


    </LinearLayout>