<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingHorizontal="12dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingHorizontal="12dp">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/spacing_medium"
                android:layout_marginTop="@dimen/spacing_large"
                android:text="@string/from_asset_place"
                android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                android:textColor="@color/grey_60"
                android:textSize="@dimen/form_large"/>

            <EditText
                android:id="@+id/event_place"
                style="@style/EditText.Flat.Grey"
                android:layout_width="match_parent"
                android:layout_height="@dimen/spacing_xmlarge"
                android:background="@drawable/edit_text_round_bg_white"
                android:minHeight="@dimen/spacing_xmlarge"
                android:paddingRight="@dimen/spacing_middle"
                android:maxLines="10"
                android:minLines="6"
                android:hint="@string/from_asset_place"/>
        </LinearLayout>

        <RadioGroup
            android:id="@+id/man"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingHorizontal="12dp"
            android:paddingTop="16sp"
            android:layout_marginTop="@dimen/spacing_large"
            android:layout_marginBottom="@dimen/spacing_large">

            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:enabled="true"
                android:layout_marginLeft="1dp"
                android:paddingHorizontal="@dimen/spacing_medium"
                android:paddingVertical="@dimen/spacing_middle"
                android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                android:textColor="@color/grey_60"
                android:text="@string/from_asset_place_onwer" />

            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:enabled="true"
                android:paddingHorizontal="@dimen/spacing_medium"
                android:paddingVertical="@dimen/spacing_middle"
                android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                android:textColor="@color/grey_60"
                android:text="@string/from_asset_place_loss" />

            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:enabled="true"
                android:paddingHorizontal="@dimen/spacing_medium"
                android:paddingVertical="@dimen/spacing_middle"
                android:textColor="@color/grey_60"
                android:text="@string/from_asset_place_other" />

            <EditText
                android:id="@+id/asset_from_text_other"
                style="@style/EditText.Flat.Grey"
                android:layout_width="match_parent"
                android:layout_height="@dimen/spacing_xmlarge"
                android:background="@drawable/edit_text_round_bg_white"
                android:minHeight="@dimen/spacing_xmlarge"
                android:paddingLeft="@dimen/spacing_middle"
                android:paddingRight="@dimen/spacing_middle"
                android:hint="@string/from_asset_remark" />
        </RadioGroup>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/spacing_large"
            android:paddingHorizontal="12dp"
            android:orientation="horizontal"
            android:layout_marginBottom="@dimen/spacing_large">

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/spacing_medium"
                    android:layout_marginTop="@dimen/spacing_large"
                    android:text="@string/from_asset_place_loss_name"
                    android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                    android:textColor="@color/grey_60"
                    android:textSize="@dimen/form_large"/>

                <EditText
                    android:id="@+id/name"
                    style="@style/EditText.Flat.Grey"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/spacing_xmlarge"
                    android:background="@drawable/edit_text_round_bg_white"
                    android:minHeight="@dimen/spacing_xmlarge"
                    android:paddingLeft="@dimen/spacing_middle"
                    android:paddingRight="@dimen/spacing_middle"
                    android:hint="@string/from_asset_place_loss_name"
                    android:textSize="@dimen/form_large"/>

            </LinearLayout>

            <View
                android:layout_width="@dimen/spacing_large"
                android:layout_height="0dp" />

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/spacing_medium"
                    android:layout_marginTop="@dimen/spacing_large"
                    android:text="@string/from_asset_place_loss_age"
                    android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                    android:textColor="@color/grey_60"
                    android:textSize="@dimen/form_large"/>

                <EditText
                    android:id="@+id/age"
                    style="@style/EditText.Flat.Grey"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/spacing_xmlarge"
                    android:background="@drawable/edit_text_round_bg_white"
                    android:minHeight="@dimen/spacing_xmlarge"
                    android:paddingLeft="@dimen/spacing_middle"
                    android:paddingRight="@dimen/spacing_middle"
                    android:hint="@string/from_asset_place_loss_age"
                    android:textSize="@dimen/form_large"/>



            </LinearLayout>
        </LinearLayout>

    </LinearLayout>



</LinearLayout>